--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 Django==2.2.6
+django-extensions==2.2.3
 django-jet==1.0.8
 django-mysql==3.2.0
+django-storages==1.7.2
 feedparser==5.2.1
 gunicorn==19.9.0
 mysqlclient==1.4.4
 Pillow==6.2.0
+pkg-resources==0.0.0
 PyMySQL==0.9.3
 pytz==2019.2
+six==1.12.0
 sqlparse==0.3.0
 whitenoise==4.1.4
