--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ feedparser==5.2.1
 gunicorn==19.9.0
 mysqlclient==1.4.4
 Pillow==6.2.0
-pkg-resources==0.0.0
 PyMySQL==0.9.3
 pytz==2019.2
 six==1.12.0
 sqlparse==0.3.0
+Werkzeug==0.16.0
 whitenoise==4.1.4
