Setting up REST Framework

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,9 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
+autopep8 = "*"
+black = "*"
 
 [packages]
 django-extensions = "==2.2.3"
@@ -24,3 +27,6 @@ Werkzeug = "==0.16.0"
 
 [requires]
 python_version = "3.6"
+
+[pipenv]
+allow_prereleases = true
