--- a/Pipfile
+++ b/Pipfile
@@ -4,29 +4,39 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
-autopep8 = "*"
-black = "*"
 
 [packages]
+astroid = "==2.3.3"
+autopep8 = "==1.4.4"
+django-cors-headers = "==3.1.1"
 django-extensions = "==2.2.3"
+django-filter = "==2.2.0"
 django-jet = "==1.0.8"
 django-mysql = "==3.2.0"
 django-storages = "==1.7.2"
+djangorestframework = "==3.10.3"
+djangorestframework-jwt = "==1.11.0"
+djangorestframework-simplejwt = "==4.3.0"
 feedparser = "==5.2.1"
 gunicorn = "==19.9.0"
+isort = "==4.3.21"
+lazy-object-proxy = "==1.4.3"
+markdown = "==3.1.1"
+mccabe = "==0.6.1"
 mysqlclient = "==1.4.4"
+pillow = "==6.2.0"
+pycodestyle = "==2.5.0"
+pyjwt = "==1.7.1"
+pylint = "==2.4.3"
+pymysql = "==0.9.3"
 pytz = "==2019.2"
 six = "==1.12.0"
 sqlparse = "==0.3.0"
+typed-ast = "==1.4.0"
+werkzeug = "==0.16.0"
 whitenoise = "==4.1.4"
+wrapt = "==1.11.2"
 Django = "==2.2.6"
-Pillow = "==6.2.0"
-PyMySQL = "==0.9.3"
-Werkzeug = "==0.16.0"
 
 [requires]
 python_version = "3.6"
-
-[pipenv]
-allow_prereleases = true
