--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,7 @@ werkzeug = "==0.16.0"
 whitenoise = "==4.1.4"
 wrapt = "==1.11.2"
 Django = "==2.2.6"
+django-googledrive-storage = "*"
 
 [requires]
 python_version = "3.6"
