--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,8 @@ whitenoise = "==4.1.4"
 wrapt = "==1.11.2"
 Django = "==2.2.6"
 django-googledrive-storage = "*"
+sqlalchemy = "*"
+django-conn-pool = "*"
 
 [requires]
 python_version = "3.6"
