build image from root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - DB_PASS=secret
       - DB_HOST=127.0.0.1
       - DB_PORT=33060
-    image: aaaimx-django
+    build: .
     command: bash -c "python manage.py collectstatic --noinput && 
                       python manage.py makemigrations && 
                       python manage.py migrate && 
