--- a/Pipfile
+++ b/Pipfile
@@ -43,6 +43,8 @@ Django = "==2.2.6"
 django-googledrive-storage = "*"
 sqlalchemy = "*"
 django-conn-pool = "*"
+pytest = "*"
+coverage = "*"
 
 [requires]
 python_version = "3.6"
