Migrate data to PotgreSQL

--- a/Pipfile
+++ b/Pipfile
@@ -46,6 +46,8 @@ django-conn-pool = "*"
 pytest = "*"
 coverage = "*"
 qrcode = "*"
+dj-database-url = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.6"
