--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,63 @@
-appdirs==1.4.3
 astroid==2.3.3
 attrs==19.3.0
 autopep8==1.4.4
-black==19.10b0
-cachetools==3.1.1
-certifi==2019.9.11
+cachetools==4.0.0
+certifi==2019.11.28
 chardet==3.0.4
-Click==7.0
+coverage==5.0.3
+dj-database-url==0.5.0
 Django==2.2.6
 django-appconf==1.0.3
-django-conn-pool==2.0.3
+django-conn-pool==2.1.0
 django-cors-headers==3.1.1
 django-extensions==2.2.3
 django-filter==2.2.0
 django-googledrive-storage==1.3.5
 django-jet==1.0.8
-django-mysql==3.2.0
 django-storages==1.7.2
 djangorestframework==3.10.3
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.3.0
 feedparser==5.2.1
 google-api-python-client==1.7.11
-google-auth==1.7.1
+google-auth==1.11.0
 google-auth-httplib2==0.0.3
 gunicorn==19.9.0
-httplib2==0.14.0
+httplib2==0.17.0
 idna==2.8
+importlib-metadata==1.5.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
 mccabe==0.6.1
-mysqlclient==1.4.4
+more-itertools==8.2.0
 oauth2client==4.1.3
-pathspec==0.6.0
+packaging==20.1
 Pillow==6.2.0
+pluggy==0.13.1
+psycopg2==2.8.4
+py==1.8.1
 pyasn1==0.4.8
-pyasn1-modules==0.2.7
+pyasn1-modules==0.2.8
 pycodestyle==2.5.0
 PyJWT==1.7.1
 pylint==2.4.3
 PyMySQL==0.9.3
+pyparsing==2.4.6
+pytest==5.3.5
 python-dateutil==2.8.1
 pytz==2019.2
-regex==2019.11.1
+qrcode==6.1
 requests==2.22.0
 rsa==4.0
 six==1.12.0
-SQLAlchemy==1.3.11
+SQLAlchemy==1.3.13
 sqlparse==0.3.0
-toml==0.10.0
 typed-ast==1.4.0
-uritemplate==3.0.0
-urllib3==1.25.7
+uritemplate==3.0.1
+urllib3==1.25.8
+wcwidth==0.1.8
 Werkzeug==0.16.0
 whitenoise==4.1.4
 wrapt==1.11.2
+zipp==2.1.0
