update broken libraries

--- a/Pipfile
+++ b/Pipfile
@@ -4,51 +4,63 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
-autopep8 = "*"
-black = "*"
 
 [packages]
+appdirs = "==1.4.3"
 astroid = "==2.3.3"
+attrs = "==19.3.0"
 autopep8 = "==1.4.4"
+black = "==19.10b0"
+cachetools = "==3.1.1"
+certifi = "==2019.9.11"
+chardet = "==3.0.4"
+click = "==7.0"
+django-appconf = "==1.0.3"
+django-conn-pool = "==2.0.3"
 django-cors-headers = "==3.1.1"
 django-extensions = "==2.2.3"
 django-filter = "==2.2.0"
+django-googledrive-storage = "==1.3.5"
 django-jet = "==1.0.8"
 django-storages = "==1.7.2"
 djangorestframework = "==3.10.3"
 djangorestframework-jwt = "==1.11.0"
 djangorestframework-simplejwt = "==4.3.0"
 feedparser = "==5.2.1"
+google-api-python-client = "==1.7.11"
+google-auth = "==1.7.1"
+google-auth-httplib2 = "==0.0.3"
 gunicorn = "==19.9.0"
+httplib2 = "==0.14.0"
+idna = "==2.8"
 isort = "==4.3.21"
 lazy-object-proxy = "==1.4.3"
-markdown = "==3.1.1"
 mccabe = "==0.6.1"
-pillow = "==6.2.0"
+oauth2client = "==4.1.3"
+pathspec = "==0.6.0"
+pyasn1 = "==0.4.8"
+pyasn1-modules = "==0.2.7"
 pycodestyle = "==2.5.0"
-pyjwt = "==1.7.1"
 pylint = "==2.4.3"
-pymysql = "==0.9.3"
+python-dateutil = "==2.8.1"
 pytz = "==2019.2"
+regex = "==2019.11.1"
+requests = "==2.22.0"
+rsa = "==4.0"
 six = "==1.12.0"
 sqlparse = "==0.3.0"
+toml = "==0.10.0"
 typed-ast = "==1.4.0"
-werkzeug = "==0.16.0"
+uritemplate = "==3.0.0"
+urllib3 = "==1.25.7"
 whitenoise = "==4.1.4"
 wrapt = "==1.11.2"
 Django = "==2.2.6"
-django-googledrive-storage = "*"
-sqlalchemy = "*"
-django-conn-pool = "*"
-pytest = "*"
-coverage = "*"
-qrcode = "*"
-dj-database-url = "*"
-psycopg2 = "*"
+Markdown = "==3.1.1"
+Pillow = "==6.2.0"
+PyJWT = "==1.7.1"
+SQLAlchemy = "==1.3.11"
+Werkzeug = "==0.16.0"
 
 [requires]
 python_version = "3.6"
-
-[pipenv]
-allow_prereleases = true
