--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+asgiref==3.2.7
 astroid==2.3.3
 attrs==19.3.0
 autopep8==1.4.4
@@ -8,15 +9,15 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 coverage==5.0.3
+dateparser==0.7.4
 dj-database-url==0.5.0
-Django==2.2.6
+Django==3.0.5
 django-appconf==1.0.3
 django-conn-pool==2.0.3
 django-cors-headers==3.1.1
 django-extensions==2.2.3
 django-filter==2.2.0
 django-googledrive-storage==1.3.5
-django-jet==1.0.8
 django-storages==1.7.2
 djangorestframework==3.10.3
 djangorestframework-jwt==1.11.0
@@ -30,6 +31,7 @@ httplib2==0.14.0
 idna==2.8
 importlib-metadata==1.5.0
 isort==4.3.21
+jet-bridge-base==0.7.6
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
 mccabe==0.6.1
@@ -39,6 +41,7 @@ packaging==20.1
 pathspec==0.6.0
 Pillow==6.2.0
 pluggy==0.13.1
+prompt-toolkit==2.0.9
 psycopg2==2.8.4
 py==1.8.1
 pyasn1==0.4.8
@@ -50,6 +53,7 @@ pyparsing==2.4.6
 pytest==5.3.5
 python-dateutil==2.8.1
 pytz==2019.2
+PyYAML==5.3.1
 qrcode==6.1
 regex==2019.11.1
 requests==2.22.0
@@ -59,6 +63,7 @@ SQLAlchemy==1.3.11
 sqlparse==0.3.0
 toml==0.10.0
 typed-ast==1.4.0
+tzlocal==2.0.0
 uritemplate==3.0.0
 urllib3==1.25.7
 wcwidth==0.1.8
