--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ cachetools==3.1.1
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==5.0.3
 dateparser==0.7.4
 dj-database-url==0.5.0
@@ -31,9 +33,12 @@ httplib2==0.14.0
 idna==2.8
 importlib-metadata==1.5.0
 isort==4.3.21
+itypes==1.2.0
 jet-bridge-base==0.7.6
+Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 Markdown==3.1.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
 oauth2client==4.1.3
