--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,33 @@
 version: '3'
 services:
-  ###
-  # services
-  ###
+  ##########
+  # Django #
+  ##########
   web:
     build: .
     network_mode: host
+    restart: always
     command: gunicorn aaaimxadmin.wsgi --log-file -
     volumes:
-        - .:/app
+        - .:/usr/src/app/
     ports:
         - "8000:8000"
     env_file: .env
-    tty: true
-    stdin_open: true
+    depends_on:
+      - db
+
+  ############
+  # Postgres #
+  ############
+  db:
+    image: postgres:12.0-alpine
+    ports:
+      - '5435:5432'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env.postgres
+
+volumes:
+  postgres_data:
+
