--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-export SECRET_KEY='SECRETO'
-export DB_URI='postgres://postgres:postgres@localhost:5433/postgres'
+SECRET_KEY='SECRETO'
+DB_URI='postgres://postgres:postgres@localhost:5433/postgres'
+GOOGLE_DRIVE_STORAGE_JSON_KEY_FILE='key.json'
+GOOGLE_DRIVE_JSON_KEY='YOUR_KEY_JSON_CONTENT'
