--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 SECRET_KEY='SECRETO'
-DB_URI='postgres://postgres:postgres@localhost:5433/postgres'
+DATABASE_URL='postgres://postgres:postgres@localhost:5433/postgres'
 GOOGLE_DRIVE_STORAGE_JSON_KEY_FILE='key.json'
 GOOGLE_DRIVE_JSON_KEY='YOUR_KEY_JSON_CONTENT'
