--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-appconf==1.0.4
 django-cors-headers==3.2.1
 django-filter==2.2.0
 django-googledrive-storage==1.4.0
+django-rest-registration==0.5.6
 django-storages==1.9.1
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
@@ -39,6 +40,7 @@ requests==2.23.0
 rsa==4.0
 six==1.14.0
 sqlparse==0.3.1
+typing==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.25.9
 whitenoise==5.0.1
