--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.2.7
+autopep8==1.5.4
+beautifulsoup4==4.9.3
 cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
@@ -24,13 +26,16 @@ httplib2==0.17.3
 idna==2.9
 itypes==1.2.0
 Jinja2==2.11.2
+lxml==4.6.2
 MarkupSafe==1.1.1
 oauth2client==4.1.3
 Pillow==7.1.2
+pkg-resources==0.0.0
 protobuf==3.11.3
 psycopg2-binary==2.8.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 PyJWT==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
@@ -39,7 +44,9 @@ qrcode==6.1
 requests==2.23.0
 rsa==4.0
 six==1.14.0
+soupsieve==2.1
 sqlparse==0.3.1
+toml==0.10.2
 typing==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.25.9
